- Enhanced Communication with Android App